# minutemodem_mobile

./: .dockerignore  .gitignore  .tool-versions  LQA_POLICY_SPEC.md  PASS_ON_NOTES.md  README.md  mix.exs  mob.exs
android/app/: build.gradle  google-services.json
branding/: README.md
ci/: Dockerfile  Dockerfile.native-base  MOB-TIERED-CI.md  MULTIPART-PLAN.md  README.md  pipeline.yml  vars.example.yml
ci/patches/mob/: 0001-vendor-usb-control-transfer.patch  series
ci/patches/mob_dev/: 0001-stage-hamlib-ex-otp-lib.patch  series
ci/tasks/: build-apk.sh  build-apk.yml  build-ci-image.sh  build-native-base.sh  native-base-bake.sh  publish-release.sh  publish-release.yml  s3-cache.sh
config/: config.exs
lib/minutemodem_mobile/: ale_chat_screen.ex  app.ex  application.ex  audio_pcm.ex  audio_screen.ex  camera_screen.ex  channels.ex  chat.ex  config_screen.ex  contacts.ex  contacts_screen.ex  dice_screen.ex  gnss.ex  home_screen.ex  link_protection_screen.ex  link_quality.ex  link_quality_screen.ex  linking_screen.ex  list_screen.ex  lqa_policy.ex  network_io.ex  network_screen.ex  network_time_screen.ex  networks.ex  repo.ex  rig_config.ex  rig_screen.ex  round.ex  shell_screen.ex  storage_screen.ex  text_screen.ex  tx_screen.ex  webview_screen.ex
lib/minutemodem_mobile/ale/: lqa_recorder.ex  lqa_store.ex  supervisor.ex
lib/minutemodem_mobile/audio/: loopback_backend.ex  usb_pcm_backend.ex
lib/minutemodem_mobile/modem/: manager.ex  session_supervisor.ex
lib/minutemodem_mobile/nifs/: phy_modem.ex
lib/minutemodem_mobile/rig/: cp2102.ex  cp2102_control.ex  hamlib_control.ex  hamlib_state_machine.ex  stub_control.ex
lib/minutemodem_mobile/schemas/: callsign.ex  channel.ex  (+6 more)
native/: hamlib_nif
native/phy_modem/: Cargo.toml
native/phy_modem/.cargo/: config.toml
native/phy_modem/src/: lib.rs
src/: minutemodem_mobile.erl
(+24 files in other folders)
